--- a/index.html
+++ b/index.html
@@ -10,4 +10,10 @@
         s.src = (d.location.protocol === 'https:' ? 'https:': 'http:')
           + '//call.chatra.io/chatra.js';
         if (d.head) d.head.appendChild(s);
-      })(document, window, 'Chatra');</script><script type=text/javascript src=/static/js/manifest.84140b56ffa80500dd96.js></script><script type=text/javascript src=/static/js/vendor.8e86ba9511f9630ad1a3.js></script><script type=text/javascript src=/static/js/app.7ef367f7617a91e6f57b.js></script></body></html>
+      })(document, window, 'Chatra');</script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-87718763-4', 'auto');
+      ga('send', 'pageview');</script><script type=text/javascript src=/static/js/manifest.1cd5d18b84f4a39bee2c.js></script><script type=text/javascript src=/static/js/vendor.8e86ba9511f9630ad1a3.js></script><script type=text/javascript src=/static/js/app.47162c20a7bf9491ae27.js></script></body></html>
