--- a/index.html
+++ b/index.html
@@ -16,4 +16,10 @@
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-87718763-4', 'auto');
-      ga('send', 'pageview');</script><script type=text/javascript src=/static/js/manifest.c262beb484c541e128ba.js></script><script type=text/javascript src=/static/js/vendor.0fd8b1ab6c91d04efdaa.js></script><script type=text/javascript src=/static/js/app.42bf35f2981d548fb08c.js></script></body></html>
+      ga('send', 'pageview');</script><div id=fb-root></div><script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script><script type=text/javascript src=/static/js/manifest.2b4dda5539162c478c7d.js></script><script type=text/javascript src=/static/js/vendor.0fd8b1ab6c91d04efdaa.js></script><script type=text/javascript src=/static/js/app.de42c1301a71c3b4f9b9.js></script></body></html>
