--- a/index.html
+++ b/index.html
@@ -22,4 +22,4 @@
       js = d.createElement(s); js.id = id;
       js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.10";
       fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script><script type=text/javascript src=/static/js/manifest.8ccd9f1c591b273d0d97.js></script><script type=text/javascript src=/static/js/vendor.0fd8b1ab6c91d04efdaa.js></script><script type=text/javascript src=/static/js/app.d35f3abd57707405f769.js></script></body></html>
+    }(document, 'script', 'facebook-jssdk'));</script><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script><script type=text/javascript src=/static/js/manifest.1eb4200c7c2de12882a3.js></script><script type=text/javascript src=/static/js/vendor.0fd8b1ab6c91d04efdaa.js></script><script type=text/javascript src=/static/js/app.d929794d1b091f3ec8b0.js></script></body></html>
