--- a/conheca.html
+++ b/conheca.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>Chamada Gemidao</title>
+  <title>Chamada Gemidão</title>
   <meta name=theme-color content=#23d160>
   <meta name=description content="Chamada Gemidão é o serviço que realiza ligações para fixo e móvel e ao atender o famoso aúdio do whatsapp é tocado">
   <meta name=keywords content="chamada gemidão, chamada gemido, gemidao, gemido">
   <meta property=og:title content="Chamada Gemidão">
   <meta property=og:description content="Chamada Gemidão é o serviço que realiza ligações para fixo e móvel e ao atender o famoso aúdio do whatsapp é tocado">
-  <meta property=og:image content=/static/img/icon.png>
+  <meta property=og:image content="/static/img/icon.png">
   <meta property=og:url content="https://chamadagemidao.com/">
   <meta property=og:type content="website ligacao chamada gemidao">
   <meta property=og:site_name content="Chamada Gemidao">
-  <link rel=icon type=image/png href="/static/img/icon.png"/>
+  <link rel=icon type=image/png href="https://chamadagemidao.com/static/img/icon.png"/>
+  <meta name="twitter:image" content="https://chamadagemidao.com/static/img/icon.png">
   <style>
 
     body {
