--- a/conheca.html
+++ b/conheca.html
@@ -47,7 +47,7 @@
 <body onclick="play()">
 
 <!-- autoplay="true" -->
-<audio style="display:none;" controls id="mulher" preload="auto">
+<audio style="display:none;" controls id="mulher" preload="auto" autoplay >
   <source src="https://chamadagemidao.com/static/audio/mulher.mp3" type="audio/mpeg">
 </audio>
 
